--- a/webinterface/view/layout/side-menu.phtml
+++ b/webinterface/view/layout/side-menu.phtml
@@ -23,13 +23,13 @@
                 <li class="menu-title">Stations</li>
                 <li>
                     <a href="/stations/honduras" class="waves-effect waves-primary">
-                        <i class="ti-location-arrow"></i><span> Stations Honduras</span>
+                        <i class="ti-location-arrow"></i><span> Honduras</span>
                     </a>
                 </li>
 
                 <li>
                     <a href="/stations/usa" class="waves-effect waves-primary">
-                        <i class="ti-location-arrow"></i><span> Stations USA</span>
+                        <i class="ti-location-arrow"></i><span> United States</span>
                     </a>
                 </li>
             </ul>
