--- a/webinterface/view/main/honduras-stations.phtml
+++ b/webinterface/view/main/honduras-stations.phtml
@@ -22,7 +22,7 @@
         <div class="card-box">
             <h4 class="text-dark header-title m-t-0">Stations Honduras Measurements</h4>
             <p class="text-muted m-b-25 font-13">
-                The latest measurements from stations in Honduras. Click on the row for download information.
+                The latest measurements from stations in Honduras. Click on the row to download information.
             </p>
 
             <div id="station-table"></div>
