--- a/webinterface/view/main/map.phtml
+++ b/webinterface/view/main/map.phtml
@@ -20,8 +20,11 @@
 
     <div class="col-lg-12">
         <div class="card-box">
-            <h4 class="header-title m-t-0">Station Visualisation</h4>
-            <div id="honduras-map-markers" style="height: 500px;"></div>
+            <h4 class="header-title m-t-0">Station Visualisation Honduras</h4>
+            <p class="text-muted m-b-10 font-13" style="border-bottom: 1px solid #eee; padding-bottom:10px;">
+                Real-time visualisation of Honduras. Provided with temperature and humidity over stations.
+            </p>
+            <div id="map-markers" style="height: 500px;"></div>
         </div>
     </div>
 
@@ -29,6 +32,6 @@
 <!-- end row -->
 
 <?php \App\LayoutModel::appendScript('/plugins/jvectormap/jquery-jvectormap-2.0.2.min.js') ?>
-<?php \App\LayoutModel::appendScript('/plugins/jvectormap/jquery-jvectormap-honduras.js') ?>
+<?php \App\LayoutModel::appendScript('/plugins/jvectormap/jquery-jvectormap-north_america-mill.js') ?>
 <?php \App\LayoutModel::appendScript('/plugins/sweet-alert/sweetalert2.min.js') ?>
 <?php \App\LayoutModel::appendScript('/assets/pages/jquery.map.js') ?>
